--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ env
 *.DS_Store
 *.pyc
 __pycache__
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
